--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
@@ -22,6 +21,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "next": "^14.0.3",
     "typescript": "^5"
   }
 }
