--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.14.2",
+    "@tanstack/react-query-devtools": "^5.14.2",
     "axios": "^1.6.2",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.1"
   },
